# terminal_cribbage

./: Cargo.toml  README.md
.github/workflows/: lint.yml  pages.yml  rust.yml
src/: lib.rs  main.rs
src/cards/: card.rs  deck.rs  hand.rs  mod.rs  score.rs
src/game/: controller.rs  display.rs  io_controller.rs  mod.rs  noop_display.rs  play_data.rs  player.rs  predetermined_controller.rs  rng_controller.rs  ui_display.rs
