[package]
name = "terminal_cribbage"
version = "0.0.1"
authors = ["Dylan Hicks <dman1366@gmail.com>"]

[lib]
name = "libterminal_cribbage"
path = "src/lib.rs"

[[bin]]
name = "terminal_cribbage"
path = "src/main.rs"
doc = false

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
itertools = "0.11.0"

